tests/NormalTests/paczka2/big_fuzzy/79003440.err
Error in line 7: ZtLqQnKuF S335 59,2
Error in line 8: A71 S335 37,2
Error in line 15: A71 A71 25,4
Error in line 18: A71 S335 71,7
Error in line 23: rp8mIjvLE54 A12 39,7
Error in line 33: Je6q9c S335 95,9
Error in line 30: LQNRWhFFS S335 45,6
Error in line 38: LQNRWhFFS A71 18,88
Error in line 34: Je6q9c A12 41,3
Error in line 37: LQNRWhFFS A71 5,7
Error in line 50: ZtLqQnKuF A71 51,1
Error in line 52: ZtLqQnKuF S335 48,6
Error in line 55: ZtLqQnKuF A12 13,4
Error in line 62: LQNRWhFFS A71 16,93
Error in line 40: rp8mIjvLE54 S335 39,9
Error in line 73: Je6q9c S953 86,6
Error in line 70: rp8mIjvLE54 S953 16,2
Error in line 75: Je6q9c A71 39,4
Error in line 83: 6pNQ A71 71,2
Error in line 80: vjlW S953 99,3
Error in line 88: 6pNQ A12 15,0
Error in line 92: LQNRW	FFS S335 37,9
Error in line 113: ZtLqQnKuF A71 -2,6
Error in line 115: Je6q9c A12 1,81
Error in line 100: Je6q9c S335 19,8
Error in line 129: A71 S953 21,8
Error in line 125: LQNRWhFFS A12 22,7
Error in line 139: LQNRWhFFS S953 -1,5
Error in line 137: A71 A12 65,8
Error in line 110: ZtLqQnKuF A71 27,1
Error in line 135: vjlW A12 87,3
Error in line 148: A71 A12 52,5
Error in line 151: ZtLqQnKuF S953 46,1
Error in line 162: Je6q9c S953 15,3
Error in line 164: Je6q9c S335 47,5
Error in line 134: LQNRWhFFS S953 15,0
Error in line 170: Je6q9c A71 35,5
Error in line 184: LQNRWhFFS A71 47,3
Error in line 191: Je6q9c S953 54,9
Error in line 201: vjlW S335 61,6
Error in line 205: vjlW S953 45,6
Error in line 202: ZtLqQnKuF A12 22,1
Error in line 208: rp8mIjvLE54 A12 351,3
Error in line 211: rp8mIjvLE54 S953 1,1
Error in line 221: rp8mIjvLE54 A71 22,8
Error in line 224: rp8mIjvLE54 A12 57,3
